More univariate analysis and combined FE and modeling notebooks

--- a/notebooks/01-eda.ipynb
+++ b/notebooks/01-eda.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "id": "1a0b986a",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "id": "1ba1d701",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "4          Ebonee Tree       On Time  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "id": "bd54cfca",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "959cf92b",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
+   "id": "4aaee9e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Airport Continent\n",
+       "NAM    0.324816\n",
+       "AS     0.188980\n",
+       "OC     0.140602\n",
+       "EU     0.125077\n",
+       "AF     0.111845\n",
+       "SAM    0.108681\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Airport Continent\"].value_counts(normalize=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "a2984724",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Airport Country Codes: 235\n",
+      "Median size: 122.0\n",
+      "Categories with < 10 samples: 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "counts= df[\"Airport Country Code\"].value_counts()\n",
+    "\n",
+    "print(f\"Total Airport Country Codes: {len(counts)}\")\n",
+    "print(f\"Median size: {counts.median()}\")\n",
+    "print(f\"Categories with < 10 samples: {(counts < 10).sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "4a7dc8cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Airport Names: 9062\n",
+      "Median size: 11.0\n",
+      "Categories with < 10 samples: 3287\n"
+     ]
+    }
+   ],
+   "source": [
+    "counts= df[\"Airport Name\"].value_counts()\n",
+    "\n",
+    "print(f\"Total Airport Names: {len(counts)}\")\n",
+    "print(f\"Median size: {counts.median()}\")\n",
+    "print(f\"Categories with < 10 samples: {(counts < 10).sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "38f7dbe2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Country Names: 235\n",
+      "Median size: 122.0\n",
+      "Categories with < 10 samples: 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "counts= df[\"Country Name\"].value_counts()\n",
+    "\n",
+    "print(f\"Total Country Names: {len(counts)}\")\n",
+    "print(f\"Median size: {counts.median()}\")\n",
+    "print(f\"Categories with < 10 samples: {(counts < 10).sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "68574bfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Arrival Airports: 9024\n",
+      "Median size: 11.0\n",
+      "Categories with < 10 samples: 3280\n"
+     ]
+    }
+   ],
+   "source": [
+    "counts= df[\"Arrival Airport\"].value_counts()\n",
+    "\n",
+    "print(f\"Total Arrival Airports: {len(counts)}\")\n",
+    "print(f\"Median size: {counts.median()}\")\n",
+    "print(f\"Categories with < 10 samples: {(counts < 10).sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "id": "aca6c2fc",
    "metadata": {},
    "outputs": [
@@ -425,7 +549,7 @@
        "<Axes: xlabel='Age', ylabel='Count'>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -459,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 65,
    "id": "7614ca1b",
    "metadata": {},
    "outputs": [
@@ -488,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 66,
    "id": "54eb9d8c",
    "metadata": {},
    "outputs": [
@@ -516,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 67,
    "id": "74aff0b5",
    "metadata": {},
    "outputs": [
@@ -569,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 68,
    "id": "903fbfb1",
    "metadata": {},
    "outputs": [
@@ -674,8 +798,18 @@
     "## Summary & Next Steps\n",
     "\n",
     "**Insights**\n",
+    "- There are clearly some useless features for predicting flight status\n",
+    "    - *Passenger ID*\n",
+    "    - *First Name*\n",
+    "    - *Last Name*\n",
+    "    - *Pilot Name*\n",
+    "\n",
+    "- The high-cardinality of multiple features and sparsity of certain categories will be a constraint.\n",
+    "\n",
     "- It appears that the dataset is synthetic as the balance for the target remains equal throughout different features. Especially since real world airline data would not have this much uniformity between status.\n",
+    "\n",
     "- To predict the target, it will be important to consider the interactions between features. If there is predictive aspect to these features but might be extremely conditional or weak.\n",
+    "\n",
     "- The target seems to not be strongly dependent on the features. Might be difficult to create a model with high accuracy.\n",
     "\n",
     "**Next Steps**\n",
