--- a/notebooks/02-modeling.ipynb
+++ b/notebooks/02-modeling.ipynb
@@ -10,30 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "64f0e5d7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "pd.set_option(\"display.max_columns\", 150)\n",
-    "pd.set_option(\"display.max_rows\", 150)\n",
-    "\n",
-    "# Set Matplotlib defaults\n",
-    "plt.style.use(\"seaborn-whitegrid\")\n",
-    "plt.rc(\"figure\", autolayout=True)\n",
-    "plt.rc(\n",
-    "    \"axes\",\n",
-    "    labelweight=\"bold\",\n",
-    "    labelsize=\"large\",\n",
-    "    titleweight=\"bold\",\n",
-    "    titlesize=14,\n",
-    "    titlepad=10,\n",
-    ")"
+    "pd.set_option(\"display.max_rows\", 150)\n"
    ]
   },
   {
@@ -46,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "b7f2e36a",
    "metadata": {},
    "outputs": [],
@@ -57,8 +44,16 @@
     "df = pd.read_csv(data_dir / \"Airline Dataset Updated - v2.csv\")\n",
     "\n",
     "# confirm data loaded\n",
-    "df.shape\n",
-    "df.head()"
+    "df.head()\n",
+    "\n",
+    "# Seperate Target and Predictors\n",
+    "y = df[\"Flight Status\"]\n",
+    "X = df.drop([\"Flight Status\"], axis=1)\n",
+    "\n",
+    "# Train / Test Split\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(\n",
+    "    X, y, train_size=0.8, \n",
+    "    test_size=0.2, random_state=0, stratify=y)\n"
    ]
   },
   {
@@ -70,12 +65,184 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "40e4bc99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train cols: Index(['Gender', 'Age', 'Nationality', 'Airport Country Code', 'Country Name',\n",
+      "       'Airport Continent', 'Continents', 'Departure Date'],\n",
+      "      dtype='object')\n",
+      "X_valid cols: Index(['Gender', 'Age', 'Nationality', 'Airport Country Code', 'Country Name',\n",
+      "       'Airport Continent', 'Continents', 'Departure Date'],\n",
+      "      dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Nationality</th>\n",
+       "      <th>Airport Country Code</th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Airport Continent</th>\n",
+       "      <th>Continents</th>\n",
+       "      <th>Month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>44542</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>88</td>\n",
+       "      <td>China</td>\n",
+       "      <td>CL</td>\n",
+       "      <td>Chile</td>\n",
+       "      <td>SAM</td>\n",
+       "      <td>South America</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29873</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>50</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>Papua New Guinea</td>\n",
+       "      <td>OC</td>\n",
+       "      <td>Oceania</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5693</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>87</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>NAM</td>\n",
+       "      <td>North America</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11885</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>65</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>NZ</td>\n",
+       "      <td>New Zealand</td>\n",
+       "      <td>OC</td>\n",
+       "      <td>Oceania</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40407</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Norway</td>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>NAM</td>\n",
+       "      <td>North America</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Gender  Age Nationality Airport Country Code      Country Name  \\\n",
+       "44542  Female   88       China                   CL             Chile   \n",
+       "29873    Male   50      Russia                   PG  Papua New Guinea   \n",
+       "5693   Female   87       Japan                   CA            Canada   \n",
+       "11885  Female   65      Russia                   NZ       New Zealand   \n",
+       "40407    Male   35      Norway                   US     United States   \n",
+       "\n",
+       "      Airport Continent     Continents  Month  \n",
+       "44542               SAM  South America      1  \n",
+       "29873                OC        Oceania      1  \n",
+       "5693                NAM  North America     12  \n",
+       "11885                OC        Oceania      6  \n",
+       "40407               NAM  North America      7  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Preprocess X_train and X_valid:\n",
+    "# - Drop unhelpful IDs for prediction\n",
+    "# - Extract month \n",
+    "\n",
+    "# Drop IDs\n",
+    "X_train = X_train.drop(columns=[\"Passenger ID\", \"First Name\", \"Last Name\", \"Pilot Name\"])\n",
+    "X_valid = X_valid.drop(columns=[\"Passenger ID\", \"First Name\", \"Last Name\", \"Pilot Name\"])\n",
+    "\n",
+    "\n",
+    "# Drop Airport Name and Arrival Airport since most categories have less than 20 entries\n",
+    "X_train = X_train.drop(columns=[\"Airport Name\", \"Arrival Airport\"])\n",
+    "X_valid = X_valid.drop(columns=[\"Airport Name\", \"Arrival Airport\"])\n",
+    "print(f\"X_train cols: {X_train.columns}\")\n",
+    "print(f\"X_valid cols: {X_valid.columns}\")\n",
+    "\n",
+    "# Extract Month\n",
+    "parsed_train = pd.to_datetime(X_train[\"Departure Date\"], format=\"mixed\", errors=\"coerce\")\n",
+    "\n",
+    "train_month = parsed_train.dt.month\n",
+    "X_train[\"Month\"] = train_month\n",
+    "X_train = X_train.drop(columns=[\"Departure Date\"])\n",
+    "\n",
+    "parsed_valid = pd.to_datetime(X_valid[\"Departure Date\"],\n",
+    "format=\"mixed\", errors=\"coerce\")\n",
+    "\n",
+    "valid_month = parsed_valid.dt.month\n",
+    "X_valid[\"Month\"] = valid_month\n",
+    "X_valid = X_valid.drop(columns=[\"Departure Date\"])\n",
+    "\n",
+    "X_train.head()\n",
+    "X_valid.head()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c07bcc05",
    "metadata": {},
    "source": [
     "# 3. Baseline"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f2a0ea4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -109,7 +276,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   }
  },
