Finished modeling & minor changes to README

--- a/notebooks/02-modeling.ipynb
+++ b/notebooks/02-modeling.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "id": "64f0e5d7",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "id": "b7f2e36a",
    "metadata": {},
    "outputs": [],
@@ -61,12 +61,12 @@
    "id": "f20ecf5c",
    "metadata": {},
    "source": [
-    "# 2. Preprocessing / Feature Engineering"
+    "# 2. Data Preparation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "id": "40e4bc99",
    "metadata": {},
    "outputs": [
@@ -74,124 +74,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train cols: Index(['Gender', 'Age', 'Nationality', 'Airport Country Code', 'Country Name',\n",
-      "       'Airport Continent', 'Continents', 'Departure Date'],\n",
+      "X_train cols: Index(['Gender', 'Age', 'Nationality', 'Country Name', 'Airport Continent',\n",
+      "       'Continents', 'Departure Date'],\n",
       "      dtype='object')\n",
-      "X_valid cols: Index(['Gender', 'Age', 'Nationality', 'Airport Country Code', 'Country Name',\n",
-      "       'Airport Continent', 'Continents', 'Departure Date'],\n",
+      "X_valid cols: Index(['Gender', 'Age', 'Nationality', 'Country Name', 'Airport Continent',\n",
+      "       'Continents', 'Departure Date'],\n",
       "      dtype='object')\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Nationality</th>\n",
-       "      <th>Airport Country Code</th>\n",
-       "      <th>Country Name</th>\n",
-       "      <th>Airport Continent</th>\n",
-       "      <th>Continents</th>\n",
-       "      <th>Month</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>44542</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>88</td>\n",
-       "      <td>China</td>\n",
-       "      <td>CL</td>\n",
-       "      <td>Chile</td>\n",
-       "      <td>SAM</td>\n",
-       "      <td>South America</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29873</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>50</td>\n",
-       "      <td>Russia</td>\n",
-       "      <td>PG</td>\n",
-       "      <td>Papua New Guinea</td>\n",
-       "      <td>OC</td>\n",
-       "      <td>Oceania</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5693</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>87</td>\n",
-       "      <td>Japan</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>NAM</td>\n",
-       "      <td>North America</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11885</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>65</td>\n",
-       "      <td>Russia</td>\n",
-       "      <td>NZ</td>\n",
-       "      <td>New Zealand</td>\n",
-       "      <td>OC</td>\n",
-       "      <td>Oceania</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40407</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>35</td>\n",
-       "      <td>Norway</td>\n",
-       "      <td>US</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>NAM</td>\n",
-       "      <td>North America</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Gender  Age Nationality Airport Country Code      Country Name  \\\n",
-       "44542  Female   88       China                   CL             Chile   \n",
-       "29873    Male   50      Russia                   PG  Papua New Guinea   \n",
-       "5693   Female   87       Japan                   CA            Canada   \n",
-       "11885  Female   65      Russia                   NZ       New Zealand   \n",
-       "40407    Male   35      Norway                   US     United States   \n",
-       "\n",
-       "      Airport Continent     Continents  Month  \n",
-       "44542               SAM  South America      1  \n",
-       "29873                OC        Oceania      1  \n",
-       "5693                NAM  North America     12  \n",
-       "11885                OC        Oceania      6  \n",
-       "40407               NAM  North America      7  "
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -205,8 +94,8 @@
     "\n",
     "\n",
     "# Drop Airport Name and Arrival Airport since most categories have less than 20 entries\n",
-    "X_train = X_train.drop(columns=[\"Airport Name\", \"Arrival Airport\"])\n",
-    "X_valid = X_valid.drop(columns=[\"Airport Name\", \"Arrival Airport\"])\n",
+    "X_train = X_train.drop(columns=[\"Airport Name\", \"Arrival Airport\", \"Airport Country Code\"])\n",
+    "X_valid = X_valid.drop(columns=[\"Airport Name\", \"Arrival Airport\", \"Airport Country Code\"])\n",
     "print(f\"X_train cols: {X_train.columns}\")\n",
     "print(f\"X_valid cols: {X_valid.columns}\")\n",
     "\n",
@@ -225,7 +114,11 @@
     "X_valid = X_valid.drop(columns=[\"Departure Date\"])\n",
     "\n",
     "X_train.head()\n",
-    "X_valid.head()\n"
+    "X_valid.head()\n",
+    "\n",
+    "numerical_cols = [\"Age\"]\n",
+    "categorical_cols = [\"Gender\", \"Nationality\", \"Country Name\",\n",
+    "\"Continents\", \"Month\"]\n"
    ]
   },
   {
@@ -233,23 +126,83 @@
    "id": "c07bcc05",
    "metadata": {},
    "source": [
-    "# 3. Baseline"
+    "# 3. Baseline Model Pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "9f2a0ea4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# LogisticReg\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "# Constructing Pipeline\n",
+    "numerical_transformer = SimpleImputer(strategy='median')\n",
+    "categorical_transformer = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='most_frequent')),\n",
+    "    ('onehot', OneHotEncoder(handle_unknown='ignore'))\n",
+    "])\n",
+    "\n",
+    "# Bundle the preprocessing\n",
+    "preprocessor = ColumnTransformer(transformers=[\n",
+    "    ('num', numerical_transformer, numerical_cols),\n",
+    "    ('cat', categorical_transformer, categorical_cols)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "c5e45783",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Define Model\n",
+    "base_model = LogisticRegression(max_iter=5000, random_state=0)\n",
+    "\n",
+    "# Bundle preprocessing and model into pipeline\n",
+    "base_pipeline = Pipeline(steps=[('preprocessor', preprocessor),\n",
+    "                                ('model', base_model)])\n",
+    "\n",
+    "# Fit model and get predictions\n",
+    "base_pipeline.fit(X_train, y_train)\n",
+    "base_preds = base_pipeline.predict(X_valid)\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "d030f2cd",
    "metadata": {},
    "source": [
-    "# 4. Tree-based Comparison"
+    "# 4. RandomForest Model Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "65771efb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "forest_model = RandomForestClassifier(n_estimators=100, random_state=0)\n",
+    "\n",
+    "forest_pipeline = Pipeline(steps=[('preprocessor', preprocessor),\n",
+    "                                  ('model', forest_model)])\n",
+    "\n",
+    "# Fit model and get predictions\n",
+    "forest_pipeline.fit(X_train, y_train)\n",
+    "forest_preds = forest_pipeline.predict(X_valid)"
    ]
   },
   {
@@ -261,11 +214,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "af685943",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baseline (LogisticRegression) model validation accuracy: 0.3338065301155952\n",
+      "RandomForest model validation accuracy: 0.32893936321233014\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate Logistic Regression model\n",
+    "base_acc = accuracy_score(y_valid, base_preds)\n",
+    "print(f\"Baseline (LogisticRegression) model validation accuracy: {base_acc}\")\n",
+    "\n",
+    "\n",
+    "# Evaluate RandomForest Model\n",
+    "forest_acc = accuracy_score(y_valid, forest_preds)\n",
+    "print(f\"RandomForest model validation accuracy: {forest_acc}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6b1b618a",
    "metadata": {},
    "source": [
-    "# Conclusion"
+    "# Conclusion\n",
+    "\n",
+    "Both Logistic Regression (~33%) and Random Forest Classifier (~32%) models had a validation accuracy comparable to random guessing between the three categories of flight status. This result lines up with obeservations made during EDA where proportions of the flight status remained about the same throughout individual features and interactions.\n",
+    "\n",
+    "EDA had hinted that the features were not strong predictors of the flight status since there was little variance of the target when looking at distributions. Thus, the given features have limited predictive information as shown by the modeling results.\n",
+    "\n"
    ]
   }
  ],
